# dvfs_gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  freq_scaling.sln
build2/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters
build2/src/nvOC/: INSTALL.vcxproj  INSTALL.vcxproj.filters  freq_exhaustive.vcxproj  freq_exhaustive.vcxproj.filters  freq_exhaustive_lib.vcxproj  freq_exhaustive_lib.vcxproj.filters  freq_optimization.vcxproj  freq_optimization.vcxproj.filters  freq_optimization_lib.vcxproj  freq_optimization_lib.vcxproj.filters  gpu_power_monitor.vcxproj  gpu_power_monitor.vcxproj.filters  hash-log-excavator.vcxproj  hash-log-excavator.vcxproj.filters  nvapiOC.vcxproj  nvapiOC.vcxproj.filters  nvapiOC_lib.vcxproj  nvapiOC_lib.vcxproj.filters  nvmlOC.vcxproj  nvmlOC.vcxproj.filters  nvmlOC_lib.vcxproj  nvmlOC_lib.vcxproj.filters  profit_optimization.vcxproj  profit_optimization.vcxproj.filters  profit_optimization_lib.vcxproj  profit_optimization_lib.vcxproj.filters  script_running_lib.vcxproj  script_running_lib.vcxproj.filters
cmake-modules/: FindEIGEN3.cmake
conan/: conan_install.sh  conanfile.py  conanfile_libXNVCtrl.py  conanfile_numerical_methods.py
configs/: currency_config_default.json  currency_config_default_linux.json  currency_config_default_windows.json  currency_config_test.json  gtx960_config.json  gtx960_user_config.json  titanV_titanX_gtx1080_p4000_opt_result.json  titanV_titanX_gtx1080_p4000_user_config.json  titanX_2x1080_config.json  titanX_2x1080_opt_result.json  titanX_2x1080_p4000_config.json  titanX_2x1080_p4000_opt_result.json  titanX_2x1080_p4000_opt_result2.json  titanX_2x1080_p4000_opt_result_linux.json  titanX_2x1080_p4000_user_config.json  titanX_2x1080_p4000_user_config2.json  titanX_3x1080_p4000_user_config.json  titanX_config.json  titanX_opt_result.json  user_config_test.json
configs/xmr-stak/: nvidia0.txt  nvidia2.txt
miner/binaries/linux/: .gitignore
miner/binaries/linux/ccminer-build/: mine_btx.sh  mine_lux.sh  mine_rvn.sh  mine_vtc.sh  mine_xmr.sh  mine_zec.sh
miner/binaries/linux/ethminer-build/: mine_eth.sh
miner/binaries/linux/xmr-stak-build/: bench_xmr.sh  mine_xmr.sh  xmr-stak
miner/binaries/linux/xmr-stak-rx-build/: mine_xmr-rx.sh  xmr-stak-rx
miner/binaries/windows/: .gitignore
nvOC/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark.h  calc_inner_mean.c  change_mem_freq.sh  exceptions.h  freq_benchmark.c  freq_benchmark.cpp  freq_hill_climbing.cpp  gpu_power_wrapper.sh  run_benchmark.sh
nvOC/freq_exhaustive/: freq_exhaustive.cpp  freq_exhaustive.h  main.cpp
nvOC/freq_hill_climbing/: freq_hill_climbing.cpp  freq_hill_climbing.h  main.cpp
nvOC/nvapi/: main.c  nvapiOC.c  nvapiOC.h
nvOC/nvml/: example_change_freq.c  main.cpp  nvmlOC.cpp  nvmlOC.h
nvOC/utils/: calc_inner_mean.c  gpu_power_monitor.c
scripts/: ccminer_generic.sh  exhaustive_bench.sh  kill_process.sh  move_result_files.sh  optimization_bench.sh  optimization_bench2.sh  remove_result_files.sh  run_benchmark_eth.sh  run_benchmark_eth_ethminer.sh  run_benchmark_ethminer.sh  run_benchmark_excavator.sh  run_benchmark_generic_ccminer.sh  run_benchmark_lux_ccminer.sh  run_benchmark_xmr.sh  run_benchmark_xmr_xmrstak-rx.sh  run_benchmark_xmr_xmrstak.sh  run_benchmark_xmrstak.sh  run_benchmark_zec.sh  run_benchmark_zec_ccminer.sh  run_benchmark_zec_excavator.sh  start_mining_eth.sh  start_mining_eth_ethminer.sh  start_mining_ethminer.sh  start_mining_excavator.sh  start_mining_generic_ccminer.sh  start_mining_lux_ccminer.sh  start_mining_xmr.sh  start_mining_xmr_xmrstak-rx.sh  start_mining_xmr_xmrstak.sh  start_mining_xmrstak.sh  start_mining_zec.sh  start_mining_zec_ccminer.sh  start_mining_zec_excavator.sh  start_pm.sh  stop_pm.sh  util_functions.sh
src/: CMakeLists.txt
src/nvOC/: CMakeLists.txt  README.md  exceptions.h
src/nvOC/benchmark/: benchmark.cpp  benchmark.h
src/nvOC/common_header/: constants.h  exceptions.h  fullexpr_accum.h
src/nvOC/freq_core/: benchmark.cpp  benchmark.h  cli_utils.h  currency_type.cpp  currency_type.h  log_utils.h  mining.cpp  network_requests.cpp  network_requests.h  optimization_config.cpp  process_management.cpp
src/nvOC/freq_exhaustive/: freq_exhaustive.cpp  freq_exhaustive.h  main.cpp
src/nvOC/freq_hill_climbing/: freq_hill_climbing.cpp  freq_hill_climbing.h  main.cpp
src/nvOC/freq_nelder_mead/: freq_nelder_mead.cpp  freq_nelder_mead.h  main.cpp
src/nvOC/freq_optimization/: freq_hill_climbing.cpp  freq_hill_climbing.h  freq_nelder_mead.cpp  freq_nelder_mead.h  freq_simulated_annealing.cpp  freq_simulated_annealing.h  main.cpp
src/nvOC/freq_simulated_annealing/: freq_simulated_annealing.cpp  freq_simulated_annealing.h  main.cpp
src/nvOC/nvapi/: main.c  main.cpp  nvapiOC.c  nvapiOC.cpp  nvapiOC.h
src/nvOC/nvml/: main.cpp  nvmlOC.cpp  nvmlOC.h
src/nvOC/profit_optimization/: cli_utils.cpp  main.cpp  network_requests.cpp  network_requests.h  optimization_config.cpp  optimization_config.h  profit_calculation.cpp  profit_calculation.h  profit_optimization.cpp  profit_optimization.h  start_config.cpp  start_config.h
src/nvOC/script_running/: benchmark.cpp  benchmark.h  cli_utils.cpp  currency_type.cpp  currency_type.h  log_utils.cpp  log_utils.h  miner_script.h  mining.cpp  mining.h  network_requests.cpp  network_requests.h  optimization_config.cpp  optimization_config.h  process_management.cpp  process_management.h
src/nvOC/utils/: calc_inner_mean.c  gpu_power_monitor.c  gpu_power_monitor.cpp  hash-log-excavator.cpp
utils/: install_linux_dependencies.sh  start_remote_X.sh
utils/submodule-stuff/: init-submodules.sh  submodule_to_subtree.sh
utils/submodule-stuff/patches/: ccminer-patch-tag2.3.1.patch  ccminer-patch-tag2.3.patch  ethminer-patch-tag0.15.0.dev11.patch  ethminer-patch-tag0.18.0.patch  xmr-stak-patch-tag1.0.4-rx.patch  xmr-stak-patch-tag2.10.8.patch  xmr-stak-patch-tag2.5.1.patch
(+8 files in other folders)
